objects/EntityStructure__c.object
<CustomObject>
    <fields>
        <fullName>CityName__c</fullName>
        <inlineHelpText>Official address for this entity, for tax filing purposes. The city.</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Entity Structures</relationshipLabel>
        <relationshipName>EntityStructures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntityName__c</fullName>
        <inlineHelpText>The entity whose structure is being defined.</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Structure History</relationshipLabel>
        <relationshipName>EntityStructures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EntityStructureEID__c</fullName>
        <description>The Enterprise ID of this Entity Structure.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this Entity Structure.</inlineHelpText>
        <label>Entity Structure EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <inlineHelpText>The structure of this business entity. Choose from the pull-down menu.</inlineHelpText>
        <label>Business Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>C Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company (LLC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Limited Partnership (LLLP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partnership (LP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Corporation (PC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Limited Liability Company (PLLC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FederalEntityEndDate__c</fullName>
        <inlineHelpText>The date the entity ceased to exist as this structure at the federal level.</inlineHelpText>
        <label>Federal Entity Dissolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalEntityStartDate__c</fullName>
        <inlineHelpText>The date this entity officially became this structure at the federal level.</inlineHelpText>
        <label>Federal Entity Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalTaxId__c</fullName>
        <inlineHelpText>The federally issued tax or employer identification number for the entity.</inlineHelpText>
        <label>Federal Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormattedFederalTaxIdFormula__c</fullName>
        <description>Federal tax ID formatted with a hyphen.</description>
        <formula>left( FederalTaxId__c ,2) &amp; &apos;-&apos; &amp; right( FederalTaxId__c ,7)</formula>
        <inlineHelpText>Federal tax ID formatted with a hyphen.</inlineHelpText>
        <label>Formatted Federal Tax Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateEntityEndDate__c</fullName>
        <inlineHelpText>The date the entity ceased to exist as this structure at the state level.</inlineHelpText>
        <label>State Entity Dissolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StateEntityStartDate__c</fullName>
        <inlineHelpText>The date this entity officially became this structure at the state level.</inlineHelpText>
        <label>State Entity Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StateTaxId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The state-issued tax or employer identification number for the entity.</inlineHelpText>
        <label>State Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State of Incorporation</description>
        <inlineHelpText>State of incorporation, which should be the same as the state that forms part of the official address for this entity for tax filing purposes.</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Entity Structures</relationshipLabel>
        <relationshipName>EntityStructures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetAddressText__c</fullName>
        <inlineHelpText>Official address for this entity, for tax filing purposes. The street address; include second line if applicable.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <inlineHelpText>Official address for this entity, for tax filing purposes. The zip or postal code.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Entity Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EntityName__c</columns>
        <columns>FederalTaxId__c</columns>
        <columns>StateTaxId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Entity_Structures</fullName>
        <columns>NAME</columns>
        <columns>EntityName__c</columns>
        <columns>EntityType__c</columns>
        <columns>FederalTaxId__c</columns>
        <columns>StateTaxId__c</columns>
        <columns>StreetAddressText__c</columns>
        <columns>CityName__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Entity Structures</label>
    </listViews>
    <nameField>
        <label>Entity Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Entity_structure_record_federalTID_BET</fullName>
        <active>false</active>
        <description>Must be required either a Business Entity Type or a Federal Tax ID to create Entity structure record.</description>
        <errorConditionFormula>AND(
LEN(FederalTaxId__c )=0,ISBLANK(TEXT(EntityType__c))
)</errorConditionFormula>
        <errorMessage>Must be required either a Business Entity Type or a Federal Tax ID to create Entity structure record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federal_Tax_ID_validate</fullName>
        <active>false</active>
        <description>Federal Tax ID should be in 9 digits of length and not allowed the hyphens or other characters.</description>
        <errorConditionFormula>AND(
LEN(FederalTaxId__c)&gt;0,
LEN ( FederalTaxId__c) &lt;&gt; 9
)</errorConditionFormula>
        <errorMessage>Federal Tax ID should be in 9 digits of length and not allowed the hyphens or other characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federal_Tax_Id_must_be_numeric</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
LEN(FederalTaxId__c)&gt;0,
NOT (ISNUMBER( FederalTaxId__c)))</errorConditionFormula>
        <errorMessage>Federal tax Id must be numeric</errorMessage>
    </validationRules>
</CustomObject>